# a2a-validator

./: .dockerignore  .gitattributes  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: dockerhub.yml  ghcr.yml  sync-to-hf-space.yml
app/: main.py  ui.py  validators.py
app/services/: validator_service.py
app/static/: script.js  styles.css
app/templates/: base.html  home.html  validator.html
